# geany-plugins

./: .gitignore  Makefile.am  configure.ac
tvcprint/: AUTHORS  ChangeLog  Makefile.am  NEWS  README
tvcprint/src/: Makefile.am  tvcdialog.c  tvcdialog.h  tvcformatter  tvcformatter.c  tvcformatter.h  tvcmatrixreader.c  tvcmatrixreader.h  tvcprint.c  tvcprint.h  tvcreflist.c  tvcreflist.h
tvctreebrowser/: AUTHORS  Makefile.am  README
tvctreebrowser/src/: Makefile.am  TVCaddCouptoolbar.c  TVCaddCouptoolbar.h  bild.h  tvcaddition.c  tvcaddition.h  tvctreebrowser.c  tvctreebrowser.h
utvc/: AUTHORS  ChangeLog  Makefile.am  README
utvc/src/: Makefile.am  report.c  report.h  utvc.c
xtvc/: ChangeLog  Makefile.am  README
xtvc/src/: Makefile.am  libtinyexpr.so.1.0.1  tvc.c
